Closed Bug 438456 Opened 16 years ago Closed 16 years ago

willShowPromptForBrowser: shouldn't set mLastBrowserView unless it needs to

Categories

(Camino Graveyard :: Tabbed Browsing, defect)

All
macOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bugzilla-graveyard, Assigned: bugzilla-graveyard)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix (obsolete) — Splinter Review
Just extra work that doesn't need to be done every single time, only if the prompt is being run on a background tab. Asking for review from Stuart since he wrote the half-fix for bug 302596 that introduced this particular code.
Attachment #324552 - Flags: review?(stuart.morgan)
Comment on attachment 324552 [details] [diff] [review]
fix

>+    // ...and bring the tab to the front (for security reasons)

Missing a space after the ellipsis.
Attachment #324552 - Flags: review?(stuart.morgan) → review+
Assignee: nobody → cl-bugs-new
Attachment #324552 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #324725 - Flags: superreview?
Attachment #324725 - Flags: superreview? → superreview?(mikepinkerton)
Comment on attachment 324725 [details] [diff] [review]
now with more space

sr=pink
Attachment #324725 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: