Bug 438456 - willShowPromptForBrowser: shouldn't set mLastBrowserView unless it needs to. Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=smorgan, sr=pink